# wall_recon

./: .gitignore  README.md
sandbox/: CMakeLists.txt  manifest.xml
sandbox/config/: concatenate.xml  concave_hull.xml  create_image.xml  feasible_areas.xml  identify_walls.xml  orthogonal_projection.xml  preparation_for_image_creation.xml  radial_projection.xml  remove_inclination.xml  sac.xml  voxel_grid.xml
sandbox/src/: concatenate.cpp  concatenate_configuration.cpp  concatenate_configuration.hpp  concave_hull.cpp  concave_hull_configuration.cpp  concave_hull_configuration.hpp  create_image.cpp  create_image_configuration.cpp  create_image_configuration.hpp  feasible_areas.cpp  feasible_areas_configuration.cpp  feasible_areas_configuration.hpp  file_scan.cpp  file_scan.hpp  identify_walls.cpp  identify_walls_configuration.cpp  identify_walls_configuration.hpp  model_environment.cpp  orthogonal_projection.cpp  orthogonal_projection_configuration.cpp  orthogonal_projection_configuration.hpp  preparation_for_creating_image.cpp  preparation_for_creating_image_configuration.cpp  preparation_for_creating_image_configuration.hpp  radial_projection.cpp  radial_projection_configuration.cpp  radial_projection_configuration.hpp  remove_inclination.cpp  remove_inclination_configuration.cpp  remove_inclination_configuration.hpp  sac.cpp  sac_configuration.cpp  sac_configuration.hpp  tinystr.cpp  tinystr.h  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp  transform.cpp  transform.hpp  (+3 more)
